Collection in outliner grayed out when all child collections are disabled #73972

Closed
opened 2020-02-18 15:09:45 +01:00 by Demeter Dzadik · 14 comments
Member

System Information
Operating system: Linux-5.3.0-7625-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 4), branch: HEAD, commit date: 2020-02-18 11:23, hash: e3e6dc41a7

Short description of error
Admittedly a very small issue, but I think it is likely a bug.

A collection's name in the outliner is grayed out when all of its child collections are disabled.
This almost makes sense, but there can be enabled objects inside the main collection. Because of this, it feels wrong and unintentional to me, that a collection that contains elements that are contributing to the scene, would get grayed out.

Exact steps for others to reproduce the error
main_collection_grayed_when_children_disabled.mp4

**System Information** Operating system: Linux-5.3.0-7625-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 4), branch: HEAD, commit date: 2020-02-18 11:23, hash: `e3e6dc41a7` **Short description of error** Admittedly a very small issue, but I think it is likely a bug. A collection's name in the outliner is grayed out when all of its child collections are disabled. This almost makes sense, but there can be enabled objects inside the main collection. Because of this, it feels wrong and unintentional to me, that a collection that contains elements that are contributing to the scene, would get grayed out. **Exact steps for others to reproduce the error** [main_collection_grayed_when_children_disabled.mp4](https://archive.blender.org/developer/F8347604/main_collection_grayed_when_children_disabled.mp4)
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @JacquesLucke, @dfelinto

Added subscribers: @JacquesLucke, @dfelinto

Hi @JacquesLucke remember to always tag the correct project when triaging a report, specially when you go as far as call it a bug. Otherwise it doesn' t show up in the corresponding queries.
(this should be super easy to fix by the way).

Hi @JacquesLucke remember to always tag the correct project when triaging a report, specially when you go as far as call it a bug. Otherwise it doesn' t show up in the corresponding queries. (this should be super easy to fix by the way).

Added subscriber: @j6m8

Added subscriber: @j6m8

Is anyone hitting this issue? Would be interested in fixing this :)

Is anyone hitting this issue? Would be interested in fixing this :)

Added subscriber: @Reinis

Added subscriber: @Reinis

@j6m8 I guess if the issue is unassigned, no one's working on it. I think you can safely assign it to yourself and have a go. Thanks for contributing!

@j6m8 I guess if the issue is unassigned, no one's working on it. I think you can safely assign it to yourself and have a go. Thanks for contributing!

@j6m8 be sure to mention here once you have a patch for this (or poke me (dfelinto) on blender.chat, to take a look at it.

@j6m8 be sure to mention here once you have a patch for this (or poke me (dfelinto) on blender.chat, to take a look at it.

Added subscriber: @manzanilla

Added subscriber: @manzanilla

I created a patch for this. In it I explain the changes.
The part of the code I modified was introduced in Commit 4234cddd by Brecht in which children flags are set as parent flags initially.
He might better know whether this patch is ok or not.
I'm new to this, not sure if I should assign him as reviewer.

I created a patch for this. In it I explain the changes. The part of the code I modified was introduced in Commit 4234cddd by Brecht in which children flags are set as parent flags initially. He might better know whether this patch is ok or not. I'm new to this, not sure if I should assign him as reviewer.
Manuel Castilla self-assigned this 2020-05-28 19:43:47 +02:00

This issue was referenced by 582d3153a1

This issue was referenced by 582d3153a1e4cc8dd8c5d398d533fadf3a9e1702

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73972
No description provided.